--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contacto</a>
           </li>
+        </ul>
       </div>
     </div>
   </nav>
@@ -119,9 +120,10 @@
       <!--Author post-->
       <div class="author container py-5 px-0 text-center">
         <div class="row px-0 mx-0">
-          <div class="col-12 col-md-3 col-lg-2 px-0 mx-0"> 
+          <div class="col-12 col-md-3 col-lg-2 px-0 mx-0">
             <img class="author__photo container-img-custom border border-secondary rounded-circle"
-              src="assets/img/naomi-thai.png" alt="foto autor"></div>
+              src="assets/img/naomi-thai.png" alt="foto autor">
+          </div>
           <div class="col-12 col-md-4 col-lg-3 px-0 mx-0">
             <h2 class="author_title">Naomi Thai</h2>
             <h3 class="author__rrss">@Naothai</h3>
